css/styles.css
:root {
  --dark-cyan: hsl(158, 36%, 37%);
  --darker-cyan: hsl(156, 59%, 25%);
  --cream: hsl(30, 38%, 92%);
  --very-drak-blue: hsl(212, 21%, 14%);
  --dark-greyish-blue: hsl(228, 12%, 48%);
  --white: hsl(0, 0%, 100%);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--cream);
}

p {
  font-family: "Montserrat", sans-serif;
  color: var(--dark-greyish-blue);
  font-size: 0.875rem;
}

h1 {
  font-family: "Fraunces", serif;
  font-size: 1.9rem;
  line-height: 1em;
}

h3 {
  font-family: "Montserrat", sans-serif;
}

img {
  max-width: 100%;
}

.container-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

.card-contents {
  display: flex;
  flex-direction: row;
  width: 37.5rem;
  height: 28.125rem;
}

.card-image {
  width: 18.75rem;
  height: 28.125rem;
  background-image: url(/img/image-product-desktop.jpg);
  background-position: center;
  background-size: contain;
  border-radius: 6px 0 0 6px;
}

/* .product-image {
  width: 300px;
  border-radius: 6px 0 0 6px;
} */

.card-text {
  width: 300px;
  background-color: white;
  border-radius: 0 6px 6px 0;
  padding: 2rem 2.2rem;
}

.perfume {
  font-size: 0.7rem;
  margin-bottom: 1.2rem;
  letter-spacing: 5px;
}

.title {
  margin-bottom: 1.75rem;
  line-height: 1.1;
}

.description {
  margin-bottom: 2rem;
  line-height: 1.6;
}

.prices {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-bottom: 2rem;
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.8rem;
  padding: 0.9rem;
  width: 100%;

  border: none;
  border-radius: 6px;
  background-color: var(--dark-cyan);
  font-size: 14px;
  font-weight: 600;
  color: var(--white);
  cursor: pointer;
}

button:hover {
  background-color: var(--darker-cyan);
}

.sale-price {
  font-family: "Fraunces", serif;
  font-size: 2rem;
  color: var(--dark-cyan);
  font-weight: 700;
}

.reg-price {
  text-decoration: line-through;
}

.attribution {
  font-size: 11px;
  text-align: center;
  margin-top: 2rem;
}

@media screen and (max-width: 600px) {
  .card-contents {
    flex-direction: column;
    width: 21.5rem;
    height: 38.125rem;
    border: 1px solid red;
  }

  .card-image {
    width: 21.5rem;
    height: 240px;
    background-image: url(/img/image-product-mobile.jpg);
    background-position: top;
    background-size: cover;
    border-radius: 6px 6px 0 0;
  }

  .card-text {
    width: 21.5rem;
    height: 370px;
    border-radius: 0 0 6px 6px;
  }

  .perfume {
    margin-bottom: 0.8rem;
  }

  .title {
    margin-bottom: 0.8rem;
  }

  .description {
    margin-bottom: 1rem;
  }

  .prices {
    margin-bottom: 1rem;
  }
}
/* .attribution a {
  color: --var(--dark-cyan);
} */

